# ANNPACK

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  ann_io.h  annpack.js  annpack.wasm  annpack_build.py  build_fast.py  index.html  io_wasm.c  main.c  mkdocs.yml  mydata.parquet  pyproject.toml  server.py  setup_v2.sh  tiny_docs.csv
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  demo_smoke.yml  nightly.yml  security_audit.yml
annpack-v2/: 1024  README.md  annpack.js  annpack.wasm  build.sh  fidelity_gate.sh  generic_index.manifest.json  index.html  io_wasm.c  requirements-eval.txt  server.py  smoke_test.sh
annpack-v2/_archive_tiny/: generic_index.manifest.json
annpack-v2/_archive_wiki/: wikipedia_en_50k.manifest.json
annpack-v2/docs/: FORMAT.md  MILESTONES.md
annpack-v2/fuzz/: build_fuzz.sh  fuzz_annpack.c
annpack-v2/include/: ann_api.h  ann_format.h  ann_io.h
annpack-v2/js/: annpack-client.js
annpack-v2/src/: ann_engine.c
annpack-v2/tests/: gen_tiny_index.py  io_posix.c  native_test.c
annpack-v2/tools/: build_beir.py  builder.py  demo_smoke.py  fidelity_gate.py
docs/: API_USAGE.md  ARCHITECTURE.md  CLI_USAGE.md  REGISTRY.md  ROADMAP.md  WASM.md  index.md
docs/benchmarks/: README.md
examples/: quickstart_10min.sh
python/annpack/: __init__.py  api.py  build.py  cli.py  packset.py  reader.py  verify.py
python/annpack/ui/: index.html
registry/: README.md  app.py
tests/: test_api.py  test_delta.py  test_packset_ops.py  test_registry.py  test_verify.py
tools/: ci_smoke.sh  clean_checkout_gate.sh  determinism_check.sh  release.sh  repo_hygiene.sh  repo_hygiene_check.sh  stage4_acceptance.sh  stage_all.sh
tools/bench/: bench.py
web/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.base.json
web/annpack-client/: README.md  package.json  tsconfig.json
web/annpack-client/src/: index.ts
web/apps/ui/: package.json
web/apps/ui/src/: App.tsx  styles.css
